<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#add8e6"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:text="@string/app_name"
        android:textColor="#0000FF"
        android:textSize="32dp"
        />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:hint="@string/usuario"
        android:textColor="#0000FF"
        android:textSize="22dp"
        />


    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20sp"
        android:drawableLeft="@drawable/ic_baseline_account_balance_24"
        android:hint="@string/password"
        android:textColor="#0000FF"
        android:textSize="22dp"
        android:inputType="textPassword"

        />

    <ImageView
        android:id="@+id/colmenas"
        android:layout_width="132dp"
        android:layout_height="129dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/logo2color"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_entrar"
            android:layout_marginLeft="30dp"
            android:text="@string/entrar"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:textStyle="bold"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_cancelar"
            android:onClick="onClick"
            android:layout_marginLeft="110dp"
            android:text="@string/cancelar"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/registrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/registrate"
            android:textColor="@color/colorBlue"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/boton_registrarse"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/registrarse"
            android:textAllCaps="false"
            android:textColor="@color/colorBlue"
            android:textSize="20dp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>

